src/pd.zig


// ---------------------------------- System -----------------------------------
// -----------------------------------------------------------------------------
extern fn sys_getblksize() u32;
pub const blockSize = sys_getblksize;
extern fn sys_getsr() Float;
pub const sampleRate = sys_getsr;
extern fn sys_get_inchannels() u32;
pub const inChannels = sys_get_inchannels;
extern fn sys_get_outchannels() u32;
pub const outChannels = sys_get_outchannels;
extern fn sys_vgui([*]const u8, ...) void;
pub const vgui = sys_vgui;
extern fn sys_gui([*]const u8) void;
pub const gui = sys_gui;
extern fn sys_pretendguibytes(i32) void;
pub const pretendGuiBytes = sys_pretendguibytes;
extern fn sys_queuegui(?*anyopaque, ?*GList, GuiCallbackFn) void;
pub const queueGui = sys_queuegui;
extern fn sys_unqueuegui(?*anyopaque) void;
pub const unqueueGui = sys_unqueuegui;
extern fn sys_getversion(*i32, *i32, *i32) void;
pub const version = sys_getversion;
extern fn sys_getfloatsize() u32;
pub const floatSize = sys_getfloatsize;
extern fn sys_getrealtime() f64;
pub const realTime = sys_getrealtime;
extern fn sys_open([*]const u8, i32, ...) i32;
pub const open = sys_open;
extern fn sys_close(i32) i32;
pub const close = sys_close;
// extern fn sys_fopen([*]const u8, [*]const u8) *FILE;
// pub const fopen = sys_fopen;
// extern fn sys_fclose(*FILE) i32;
// pub const fclose = sys_fclose;
extern fn sys_lock() void;
pub const lock = sys_lock;
extern fn sys_unlock() void;
pub const unlock = sys_unlock;
extern fn sys_trylock() i32;
pub const tryLock = sys_trylock;
extern fn sys_isabsolutepath([*]const u8) i32;
pub const isAbsolutePath = sys_isabsolutepath;
extern fn sys_bashfilename([*]const u8, [*]u8) void;
pub const bashFilename = sys_bashfilename;
extern fn sys_unbashfilename([*]const u8, [*]u8) void;
pub const unbashFilename = sys_unbashfilename;
extern fn sys_hostfontsize(i32, i32) i32;
pub const hostFontSize = sys_hostfontsize;
extern fn sys_zoomfontwidth(i32, i32, i32) i32;
pub const zoomFontWidth = sys_zoomfontwidth;
extern fn sys_zoomfontheight(i32, i32, i32) i32;
pub const zoomFontHeight = sys_zoomfontheight;
extern fn sys_fontwidth(i32) i32;
pub const fontWidth = sys_fontwidth;
extern fn sys_fontheight(i32) i32;
pub const fontHeight = sys_fontheight;

extern fn class_addcreator(NewMethod, *Symbol, u32, ...) void;
pub const addCreator = class_addcreator;

extern fn binbuf_evalfile(*Symbol, *Symbol) void;
pub const evalFile = binbuf_evalfile;
extern fn binbuf_realizedollsym(*Symbol, u32, [*]const Atom, u32) *Symbol;
pub const realizeDollSym = binbuf_realizedollsym;

extern fn canvas_getcurrentdir() *Symbol;
pub const currentDir = canvas_getcurrentdir;
extern fn canvas_suspend_dsp() i32;
pub const suspendDsp = canvas_suspend_dsp;
extern fn canvas_resume_dsp(i32) void;
pub const resumeDsp = canvas_resume_dsp;
extern fn canvas_update_dsp() void;
pub const updateDsp = canvas_update_dsp;

extern fn pd_getcanvaslist() ?*GList;
pub const canvasList = pd_getcanvaslist;
extern fn pd_getdspstate() i32;
pub const dspState = pd_getdspstate;

extern fn pd_error(?*const anyopaque, [*]const u8, ...) void;
pub const err = pd_error;

extern fn glob_setfilename(?*anyopaque, *Symbol, *Symbol) void;
pub const setFileName = glob_setfilename;

// ----------------------------------- Misc. -----------------------------------
// -----------------------------------------------------------------------------
pub const OutConnect = opaque {};
pub const Template = opaque {};
pub const Array = opaque {};

pub extern var pd_objectmaker: Pd;
pub extern var pd_canvasmaker: Pd;

pub const GotFn = ?*const fn (*anyopaque, ...) callconv(.C) void;
pub const GotFn1 = ?*const fn (*anyopaque, *anyopaque) void;
pub const GotFn2 = ?*const fn (*anyopaque, *anyopaque, *anyopaque) void;
pub const GotFn3 = ?*const fn (*anyopaque, *anyopaque, *anyopaque, *anyopaque) void;
pub const GotFn4 = ?*const fn (
	*anyopaque, *anyopaque, *anyopaque, *anyopaque, *anyopaque) void;
pub const GotFn5 = ?*const fn (
	*anyopaque, *anyopaque, *anyopaque, *anyopaque, *anyopaque, *anyopaque) void;

extern fn nullfn() void;
pub const nullFn = nullfn;

pub const sys_font: [*]u8 = @extern([*]u8, .{
	.name = "sys_font",
});
pub const sys_fontweight: [*]u8 = @extern([*]u8, .{
	.name = "sys_fontweight",
});

pub const WidgetBehavior = opaque {};
pub const ParentWidgetBehavior = opaque {};

pub extern fn post([*]const u8, ...) void;
pub extern fn startpost([*]const u8, ...) void;
pub extern fn poststring([*]const u8) void;
pub extern fn postfloat(Float) void;
pub extern fn postatom(u32, [*]const Atom) void;
pub extern fn endpost() void;

pub extern fn bug([*]const u8, ...) void;
pub extern fn logpost(?*const anyopaque, LogLevel, [*]const u8, ...) void;
pub extern fn verbose(u32, [*]const u8, ...) void;
pub const LogLevel = enum(u32) {
	critical,
	err,
	normal,
	debug,
	verbose,
};

pub extern fn open_via_path([*]const u8, [*]const u8, [*]const u8, [*]u8, *[*]u8, u32, u32) i32;
pub extern fn sched_geteventno() i32;
pub extern var sys_idlehook: ?*const fn () i32;

pub const PerfRoutine = ?*const fn ([*]usize) *usize;
pub extern fn plus_perform([*]usize) *usize;
pub extern fn plus_perf8([*]usize) *usize;
pub extern fn zero_perform([*]usize) *usize;
pub extern fn zero_perf8([*]usize) *usize;
pub extern fn copy_perform([*]usize) *usize;
pub extern fn copy_perf8([*]usize) *usize;
pub extern fn scalarcopy_perform([*]usize) *usize;
pub extern fn scalarcopy_perf8([*]usize) *usize;


pub const mayer = struct {
	extern fn mayer_fht([*]Sample, u32) void;
	pub const fht = mayer_fht;
	extern fn mayer_fft(u32, [*]Sample, [*]Sample) void;
	pub const fft = mayer_fft;
	extern fn mayer_ifft(u32, [*]Sample, [*]Sample) void;
	pub const ifft = mayer_ifft;
	extern fn mayer_realfft(u32, [*]Sample) void;
	pub const realfft = mayer_realfft;
	extern fn mayer_realifft(u32, [*]Sample) void;
	pub const realifft = mayer_realifft;
};
pub extern fn pd_fft([*]Float, u32, u32) void;


pub extern var cos_table: [*]f32;

pub fn ulog2(n: u64) u6 {
	var i = n;
	var r: u6 = 0;
	while (i > 1) : ({ r += 1; i >>= 1; }) {}
	return r;
}

pub inline fn floatPassive(fp: *Float, av: []const Atom, i: usize) void {
	if (i < av.len and av[i].type == AtomType.FLOAT) {
		fp.* = av[i].w.float;
	}
}

pub extern fn mtof(Float) Float;
pub extern fn ftom(Float) Float;
pub extern fn rmstodb(Float) Float;
pub extern fn powtodb(Float) Float;
pub extern fn dbtorms(Float) Float;
pub extern fn dbtopow(Float) Float;
pub extern fn q8_sqrt(Float) Float;
pub extern fn q8_rsqrt(Float) Float;
pub extern fn qsqrt(Float) Float;
pub extern fn qrsqrt(Float) Float;

pub const GuiCallbackFn = ?*const fn (*GObj, ?*GList) void;
pub extern fn gfxstub_deleteforkey(?*anyopaque) void;
pub extern fn pdgui_vmess([*]const u8, [*]const u8, ...) void;
pub extern fn pdgui_stub_deleteforkey(?*anyopaque) void;
pub extern fn c_extern(*Pd, NewMethod, Method, *Symbol, usize, i32, u32, ...) void;
pub extern fn c_addmess(Method, *Symbol, u32, ...) void;


pub const BigOrSmall32 = extern union {
	f: Float,
	ui: u32,
};
pub inline fn badFloat(f: Float) bool {
	var pun = BigOrSmall32 { .f = f };
	pun.ui &= 0x7f800000;
	return pun.ui == 0 or pun.ui == 0x7f800000;
}
pub inline fn bigOrSmall(f: Float) bool {
	const pun = BigOrSmall32 { .f = f };
	return pun.ui & 0x20000000 == (pun.ui >> 1) & 0x20000000;
}

pub const MidiInstance = opaque {};
pub const InterfaceInstance = opaque {};
pub const CanvasInstance = opaque {};
pub const UgenInstance = opaque {};
pub const StuffInstance = opaque {};
pub const PdInstance = extern struct {
	systime: f64,
	clock_setlist: *Clock,
	canvaslist: *GList,
	templatelist: *Template,
	instanceno: u32,
	symhash: **Symbol,
	midi: *MidiInstance,
	inter: *InterfaceInstance,
	ugen: *UgenInstance,
	gui: *CanvasInstance,
	stuff: *StuffInstance,
	newest: *Pd,
	islocked: u32,
};
pub extern var pd_maininstance: PdInstance;
pub const this = &pd_maininstance;

pub const MAXPDSTRING: u32 = 1000;
pub const MAXPDARG: u32 = 5;
pub const MAXLOGSIG: u32 = 32;
pub const MAXSIGSIZE: u32 = 1 << MAXLOGSIG;

pub const LOGCOSTABSIZE: u32 = 9;
pub const COSTABSIZE: u32 = 1 << LOGCOSTABSIZE;

pub const PD_USE_TE_XPIX = "";
pub const PDTHREADS: u32 = 1;
pub const PERTHREAD = "";
